fixed topbar on firefox. fixed mistake with minus button on focus page. (#234)

--- a/client/src/Content/focus.css
+++ b/client/src/Content/focus.css
@@ -21,8 +21,8 @@
 }
 
 .focus-remove-button {
+    display: inline-block;
     width: 40px;
-    float: right;
     margin-top: -2px;
 }
 
